<resources>
    <string name="app_name">ERMS Company</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="wave_image">wave image</string>
    <string name="login_to_your_company">Login To Your Company</string>
    <string name="login_below_with_your_credentials">Login Below With Your Credentials</string>
    <string name="password">Password</string>
    <string name="register_your_company">Register Your Company</string>
    <string name="provide_your_company_information_to_get_started">Provide Your Company Information To Get Started</string>
    <string name="company_name">Company Name</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="content_description_media">add employee icon</string>
    <string name="title">Add Employee</string>
    <string name="secondary_text">Please add an employee to the company.</string>
    <string name="nested_scroll_view">Nested Scroll View Description</string>
    <string name="name">Name</string>
    <string name="add_employee">Add Employee</string>
    <string name="add_emp_sub_heading">Please provide the employee information to register in the company, and Get Started.</string>
    <string name="cnic_employee_id">CNIC / Employee ID</string>
    <string name="website">Website</string>
    <string name="email_example">example@gmail.com</string>
    <string name="phone_example">03331234567</string>
    <string name="pakistan">Pakistan</string>
    <string name="kust">KUST</string>
    <string name="basic_information">Basic Information</string>
    <string name="site_example">kust.edu.pk</string>
    <string name="feature_name">Feature Name</string>
    <string name="department">Department Name</string>
    <string name="manager">Manager</string>
</resources>